# Tither

./: .env  .eslintrc.js  .gitignore  App.tsx  Makefile  README.md  README.structure.md  app.json  package-lock.json  package.json  pyproject.toml
.githooks/: pre-commit
.github/: pull-request-template.md
.github/ISSUE_TEMPLATE/: user_story.md
.github/workflows/: lint.yml  supabase-deploy.yml
android/: settings.gradle
android/app/: build.gradle
app/: ._layout.tsx.un~  .dashboard.tsx.un~  .login.tsx.un~  .register.tsx.un~  .registration-confirmation.tsx.un~  _layout.tsx  _layout.tsx~  dashboard.tsx  index.tsx  login.tsx  login.tsx~  register.tsx  register.tsx~  registration-confirmation.tsx  registration-confirmation.tsx~
app/(auth)/: login.tsx  register.tsx  registerChurch.tsx  registration-confirmation.tsx
app/(church-tabs)/: _layout.tsx  analytics.tsx  dashboard.tsx  members.tsx  settings.tsx
app/(tabs)/: .dashboard.tsx.swp  .settings.tsx.swp  _layout.tsx  church.tsx  dashboard.tsx  find.tsx  give.tsx  history.tsx  settings.tsx  user.tsx
app/church/: .[id].tsx.swp  [id].tsx
app/give/: payment.tsx
app/paymentMethods/: [id].tsx
components/: card.tsx  transaction.tsx
ios/: Podfile
ios/ChurchTithesApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/ChurchTithesApp.xcodeproj/: project.pbxproj
lib/server/: stripe.server.native.ts  stripe.server.ts
scripts/: reset-project.js
services/: .auth.ts.un~  .registration-confirmation.ts.un~  .supabase.ts.un~  registration-confirmation.ts~  supabase.ts~
supabase/: config.toml
(+14 files in other folders)
